@@ -21,14 +21,14 @@
 package org.apache.qpid.server.virtualhost;
 
 import java.util.Map;
-import java.util.concurrent.Callable;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
-import java.util.concurrent.ExecutionException;
+import java.util.function.Function;
 
-import com.google.common.cache.Cache;
-import com.google.common.cache.CacheStats;
-import com.google.common.collect.ImmutableMap;
+import com.github.benmanes.caffeine.cache.Cache;
+import com.github.benmanes.caffeine.cache.Policy;
+import com.github.benmanes.caffeine.cache.stats.CacheStats;
 
 public class NullCache<K, V> implements Cache<K, V>
 {
@@ -38,23 +38,24 @@ public class NullCache<K, V> implements Cache<K, V>
         return null;
     }
 
+
     @Override
-    public V get(final K key, final Callable<? extends V> loader) throws ExecutionException
+    public V get(final K k, final Function<? super K, ? extends V> function)
     {
-        try
-        {
-            return loader.call();
-        }
-        catch (Exception e)
-        {
-            throw new ExecutionException(e);
-        }
+        return null;
     }
 
     @Override
-    public ImmutableMap<K, V> getAllPresent(final Iterable<?> keys)
+    public Map<K, V> getAllPresent(final Iterable<? extends K> iterable)
     {
-        return ImmutableMap.of();
+        return Map.of();
+    }
+
+    @Override
+    public Map<K, V> getAll(final Iterable<? extends K> iterable,
+                            final Function<? super Set<? extends K>, ? extends Map<? extends K, ? extends V>> function)
+    {
+        return Map.of();
     }
 
     @Override
@@ -68,14 +69,16 @@ public class NullCache<K, V> implements Cache<K, V>
     }
 
     @Override
+    public void invalidateAll(final Iterable<? extends K> iterable)
+    {
+
+    }
+
+    @Override
     public void invalidate(final Object key)
     {
     }
 
-    @Override
-    public void invalidateAll(final Iterable<?> keys)
-    {
-    }
 
     @Override
     public void invalidateAll()
@@ -83,7 +86,7 @@ public class NullCache<K, V> implements Cache<K, V>
     }
 
     @Override
-    public long size()
+    public long estimatedSize()
     {
         return 0;
     }
@@ -91,7 +94,7 @@ public class NullCache<K, V> implements Cache<K, V>
     @Override
     public CacheStats stats()
     {
-        throw new UnsupportedOperationException();
+        return null;
     }
 
     @Override
@@ -103,5 +106,11 @@ public class NullCache<K, V> implements Cache<K, V>
     @Override
     public void cleanUp()
     {
+    }
+
+    @Override
+    public Policy<K, V> policy()
+    {
+        return null;
     }
 }
